// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`right renders 0 1`] = `
Array [
  .c0 {
  right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  right: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`right renders function 1`] = `
Array [
  .c0 {
  right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  right: has;
}

<div
    className="c0"
  />,
  .c0 {
  right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  right: has;
}

<div
    className="c0"
  />,
]
`;

exports[`right renders invalid theme path 1`] = `
Array [
  .c0 {
  right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  right: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`right renders negative number 1`] = `
Array [
  .c0 {
  right: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  right: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  right: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  right: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`right renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    right: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    right: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`right renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    right: July;
  }
}

@media April {
  .c0 {
    right: August;
  }
}

@media January {
  .c0 {
    right: September;
  }
}

@media April {
  .c0 {
    right: November;
  }
}

@media June {
  .c0 {
    right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    right: July;
  }
}

@media April {
  .c0 {
    right: August;
  }
}

@media January {
  .c0 {
    right: September;
  }
}

@media April {
  .c0 {
    right: November;
  }
}

@media June {
  .c0 {
    right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    right: January;
  }
}

@media April {
  .c0 {
    right: December;
  }
}

@media January {
  .c0 {
    right: April;
  }
}

@media April {
  .c0 {
    right: May;
  }
}

@media June {
  .c0 {
    right: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    right: January;
  }
}

@media April {
  .c0 {
    right: December;
  }
}

@media January {
  .c0 {
    right: April;
  }
}

@media April {
  .c0 {
    right: May;
  }
}

@media June {
  .c0 {
    right: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`right renders postitive number 1`] = `
Array [
  .c0 {
  right: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  right: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  right: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  right: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`right renders string 1`] = `
Array [
  .c0 {
  right: July;
}

<div
    className="c0"
  />,
  .c0 {
  right: July;
}

<div
    className="c0"
  />,
  .c0 {
  right: June;
}

<div
    className="c0"
  />,
  .c0 {
  right: June;
}

<div
    className="c0"
  />,
]
`;

exports[`right renders valid theme path 1`] = `
Array [
  .c0 {
  right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  right: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
